# pie

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  AGENTS.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  build.sh  config.json  debug_client.py  docker-compose.gpu-metrics.yml  load.sh  pyrightconfig.json  pytest.ini  repo_utils.py  run.sh  test_flashinfer_fp8.py  test_model_info.rs
backend/backend-cuda/: .gitignore  .ninja_log  CMakeLists.txt  Makefile  README.md  build.ninja  config.yaml  dev.toml  l4ma.yaml
backend/backend-management-rs/: .gitignore  Cargo.toml  PHASE1_SUMMARY.md  build.rs  config.json  rust_rewrite_plan.md
backend/backend-metal/: CMakeLists.txt  README.md
backend/backend-python/: .gitignore  README.md  __init__.py  adapter.py  adapter_utils.py  backend_ops.py  base_backend_agent.py  build_proto.sh  common.py  config.py  debug_utils.py  deepseek.py  deepseek_backend.py  dev.toml  driver.py  flashinfer_ops.py  handler.py  handler_common.py  l4m_backend.py  l4ma.py  message.py  metal_ops.py  model_factory.py  model_loader.py  platform_detection.py  profiler.py  pyproject.toml  q4wen.py  qwen.py  qwen3.py  qwen3_backend.py  qwen3_cli.py  rand_mv.py  requirements.txt  server.py  server_common.py  test_qwen3_standalone.py
cli/: Cargo.toml
cli/src/: application.rs  backend.rs  config.rs  controller.rs  controller_new.rs  lib.rs  main.rs  model.rs  spinner.rs
cli/tests/: cli_integration_tests.rs
client/: Cargo.toml
client/cli/: Cargo.toml  pyproject.toml
client/cli-python/: README.md  pyproject.toml
client/cli-rust/: Cargo.toml
client/javascript/: README.md  package.json
client/python/: README.md  main.py  pyproject.toml  typego_s0.py
client/rust/: Cargo.toml
client/src/: client.rs  main.rs
control/: README.md  pyproject.toml
control/tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_model.py  test_path.py
engine/: Cargo.toml  README.md  build.rs  config.json  download_tokenizer.sh  example_config.toml
engine-manager/: Cargo.toml
engine-manager/src/: handlers.rs  lib.rs  main.rs  models.rs  state.rs
engine/backend-python/: README.md
engine/backend-rust/: Cargo.toml
engine/examples/: tokenizer_demo.rs
engine/src/: auth.rs  backend.rs  backend_discovery.rs  backend_old.rs  batching.rs  bindings.rs  client.rs  cmd_buffer.rs  controller.rs  controller_old.rs  driver.rs  driver_l4m.rs  driver_l4m_vision.rs  driver_ping.rs  dummy.rs  handler.rs  instance.rs  instance_old.rs  l4m.rs  lib.rs  lm.rs  main.rs  main_old.rs  messaging.rs  object.rs  ping.rs  play.rs  remote_obj.rs  runtime.rs  server.rs  service.rs  spi.rs  state.rs  state_old.rs  tokenizer.rs  types.rs  utils.rs  wasm.rs  zmq_handler.rs
engine/tests/: tokenizer_integration_tests.rs
example-apps/: Cargo.toml  Makefile
example-apps/agent-codeact/: Cargo.toml
example-apps/agent-react/: Cargo.toml
example-apps/agent-react-bench/: Cargo.toml
example-apps/agent-swarm/: Cargo.toml
example-apps/attention-sink/: Cargo.toml
example-apps/beam-search/: Cargo.toml
example-apps/beam-search-js/: index.ts  package.json  tsconfig.json
example-apps/bench-execution-latency/: Cargo.toml
example-apps/bench-spawn-time/: Cargo.toml
example-apps/cacheback-decoding/: Cargo.toml
example-apps/constrained-decoding/: Cargo.toml
example-apps/debugger/: Cargo.toml
example-apps/echo/: Cargo.toml  metadata.toml
example-apps/function-calling/: Cargo.toml
example-apps/graph-of-thought/: Cargo.toml
example-apps/helloworld/: Cargo.toml
example-apps/helloworld-plain/: Cargo.toml
example-apps/hierarchical-attention/: Cargo.toml
example-apps/http-server/: Cargo.toml
example-apps/image-fetch/: Cargo.toml
example-apps/jacobi-decoding/: Cargo.toml
example-apps/kvs/: Cargo.toml
example-apps/messaging/: Cargo.toml
example-apps/multimodal/: Cargo.toml
example-apps/openai-compat/: Cargo.toml  benchmark_requests.py  readme.md  requirements.txt  send_request.sh
example-apps/output-validation/: Cargo.toml
example-apps/parallel-generation/: Cargo.toml
example-apps/pie/: Cargo.toml
example-apps/pie-macros/: Cargo.toml
example-apps/ping/: Cargo.toml
example-apps/prefix-caching/: Cargo.toml
example-apps/prefix-sharing/: Cargo.toml
example-apps/prefix-tree/: Cargo.toml
example-apps/recursion-of-thought/: Cargo.toml
example-apps/rt-bench/: Cargo.toml
example-apps/simple-decoding/: Cargo.toml
example-apps/simple-decoding-qwen/: Cargo.toml
example-apps/skeleton-of-thought/: Cargo.toml
example-apps/speculative-decoding/: Cargo.toml
example-apps/startup-bench/: Cargo.toml
example-apps/symphony/: Cargo.toml
example-apps/symphony-macros/: Cargo.toml
example-apps/text-completion/: Cargo.toml  metadata.toml
example-apps/text-completion-inferlib/: Cargo.toml
example-apps/text-completion-js/: index.ts  package.json
example-apps/training/: Cargo.toml
example-apps/tree-of-thought/: Cargo.toml
example-apps/typego/: Cargo.toml
example-apps/virtual-serving-system/: Cargo.toml
example-apps/watermarking/: Cargo.toml
example-apps/windowed-attention/: Cargo.toml
inferlet/: Cargo.toml
inferlet-macros/: Cargo.toml
inferlet-macros/src/: lib.rs
inferlet/inferlet/: Cargo.toml
inferlet/inferlet-macros/: Cargo.toml
inferlet/inferlet-macros2/: Cargo.toml
inferlet/inferlet2/: Cargo.toml
inferlet/src/: api.rs  chat.rs  context.rs  lib.rs  pool.rs  sampler.rs  traits.rs  zo.rs
inferlet/wit/: core.wit  (+10 more)
pie/: Cargo.toml  README.md  __init__.py  build.rs  docker_config.toml  example_config.toml  metal_config.toml  pyproject.toml
pie-cli/: Cargo.toml  docker_config.toml  example_config.toml  example_cuda_config.toml  metal_config.toml
pie-metal/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  simple_bpe.py  test_all_layers_divergence.py  test_layer_by_layer_divergence_mps.py
pied/: Cargo.toml
runtime/: Cargo.toml
runtime-backend/: README.md  pyproject.toml  reproduce_bf16_attention.py
server/: README.md  pyproject.toml
std-inferlets/: Cargo.toml
(+1582 files in other folders)
