[package]
name = "pie-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pie-launcher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
blake3 = "1.5"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
