[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pie-server"
version = "0.1.0"
description = "Pie CLI"
requires-python = ">=3.10"

# Base dependencies (without backend GPU-specific packages)
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "toml>=0.10",
    "rich>=13.0",
    "huggingface_hub>=1.2.4",
    "pie-client",
    "pie-backend",
]

[project.optional-dependencies]
# CUDA backend (default for NVIDIA GPUs)
cuda = [
    "pie-backend[cuda]",
]
# Metal backend (for Apple Silicon)
metal = [
    "pie-backend[metal]",
]
# Development/testing
test = [
    "pytest>=8.0",
]
# Default installation includes CUDA
default = [
    "pie-server[cuda]",
]

[project.scripts]
pie = "pie_cli.cli:app"

[tool.maturin]
python-source = "src"
module-name = "pie.pie_rs"
manifest-path = "../runtime/Cargo.toml"
features = ["pyo3/extension-module"]
