[package]
name = "pie_engine_manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pie_engine_manager"
path = "src/main.rs"

[lib]
name = "engine_manager"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["util"] } # For ServiceExt in tests
http-body-util = "0.1.0" # For Full in tests
mime = "0.3" # For APPLICATION_JSON in tests
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.12"
