[package]
name = "symphony"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
blake3 = "1.5.5"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
wasmtime = "29.0.1"
wasmtime-wasi = "29.0.1"
zeromq = "0.4.1"
futures = "0.3.31"
tungstenite = "0.26.1"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
serde = { version = "1.0.217", features = ["derive"] }
rmp-serde = "1.3.0"
serde_bytes = "0.11.15"
dashmap = "6.1.0"
num-traits = "0.2.19"
prost = "0.13"
fancy-regex = "0.14.0"
base64 = "0.22.1"

[build-dependencies]
prost-build = "0.13.5"
