[package]
name = "symphony-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
blake3 = "1.5.5"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
wasmtime = "30.0.2" #{ path = "../../wasmtime/crates/wasmtime" }
wasmtime-wasi = "30.0.2"# { path = "../../wasmtime/crates/wasi" }
wasmtime-wasi-http = "30.0.2" #{ path = "../../wasmtime/crates/wasi-http" }
zeromq = "0.4.1"
futures = "0.3.31"
tungstenite = "0.26.1"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
serde = { version = "1.0.217", features = ["derive"] }
rmp-serde = "1.3.0"
serde_bytes = "0.11.15"
dashmap = "6.1.0"
num-traits = "0.2.19"
prost = "0.13"
fancy-regex = "0.14.0"
base64 = "0.22.1"
thiserror = "2.0.11"
rand = "0.9.0"
colored = "3.0"

[build-dependencies]
prost-build = "0.13.5"
