[package]
name = "pie-rt"
version = "0.1.0"
edition = "2024"
authors = ["In Gim <in.gim@yale.edu>"]
description = "Pie Runtime"
license = "MIT"
repository = "https://github.com/pie-project/pie"

[dependencies]
anyhow = "1.0.95"
blake3 = "1.8.2"
tokio = { version = "1.45.1", features = ["full"] } # ["full", "tracing"]
tokio-tungstenite = "0.27.0"
wasmtime = "33.0.0" #{ path = "../../wasmtime/crates/wasmtime" }
wasmtime-wasi = "33.0.0"# { path = "../../wasmtime/crates/wasi" }
wasmtime-wasi-http = "33.0.0" #{ path = "../../wasmtime/crates/wasi-http" }
zeromq = "0.4.1"
futures = "0.3.31"
tungstenite = "0.27.0"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"
serde_bytes = "0.11.15"
toml = "0.8"
dashmap = "6.1.0"
num-traits = "0.2.19"
prost = "0.14.0"
fancy-regex = "0.14.0"
base64 = "0.22.1"
thiserror = "2.0.11"
rand = "0.9.0"
colored = "3.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
hyper = "1.6.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"


[build-dependencies]
prost-build = "0.14.0"
