[workspace]
resolver = "2"
members = [
    "constrained-decoding",
    "graph-of-thought",
    "output-validation",
    "parallel-generation",
    "prefix-caching",
    "prefix-tree",
    "recursion-of-thought",
    "skeleton-of-thought",
    "text-completion",
    "tree-of-thought",
    "watermarking",
    "windowed-attention",
]

[workspace.dependencies]
inferlet = { path = "../inferlet" }
inferlet-macros = { path = "../inferlet-macros" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"

[profile.release]
lto = true
