[workspace]
resolver = "2"
members = [
    "attention-sink",
    "beam-search",
    "constrained-decoding",
    "graph-of-thought",
    "helloworld",
    "hierarchical-attention",
    "image-fetch",
    "kvs",
    "output-validation",
    "parallel-generation",
    "prefix-caching",
    "prefix-tree",
    "recursion-of-thought",
    "skeleton-of-thought",
    "text-completion",
    "tree-of-thought",
    "watermarking",
    "windowed-attention",
]

[workspace.dependencies]
inferlet = { path = "../inferlet" }
inferlet-macros = { path = "../inferlet-macros" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"

[profile.release]
lto = true
