[package]
name = "inferlet"
version = "0.2.0"
edition = "2024"
authors = ["In Gim <in.gim@yale.edu>"]
description = "Inferlet support library for Pie"
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"
keywords = ["wasi", "wasm", "pie", "inferlet"]
categories = ["wasm"]
include = ["src", "Cargo.toml", "wit"]

[dependencies]
wit-bindgen = "0.45.0"
wstd = "0.5.3"
trait-variant = "0.1.2"
wasi = "0.14.3"
inferlet-macros = "0.1.0"
anyhow = "1.0.95"
rand = "0.9.2"
futures = "0.3.31"
minijinja = { version = "2.12.0", features = ["loader"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"