[package]
name = "pie-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for the PIE"

[dependencies]
pie = { path = "../pie" }
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
futures-util = { version = "0.3", features = ["sink"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
indicatif = "0.18"
dirs = "6.0"
rand = { version = "0.8", features = ["std_rng"] }
comfy-table = "7.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = "0.1.41"
tracing-appender = "0.2"