[package]
name = "pie-cli"
version = "0.1.0"
edition = "2024"
authors = ["In Gim <in.gim@yale.edu>"]
description = "Programmable Inference Engine (PIE) Command-Line Interface"
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

[[bin]]
name = "pie"
path = "src/main.rs"

[dependencies]
pie = { path = "../pie", version = "0.2.0"  }
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
futures-util = { version = "0.3", features = ["sink"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
indicatif = "0.18"
dirs = "6.0"
rand = { version = "0.9.2", features = ["std_rng"] }
rustyline = "17.0.0"
shellexpand = "3.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = "0.1.41"
tracing-appender = "0.2"
shlex = "1.3.0"
nix = "0.30.1"
