[package]
name = "pie"
version = "0.1.0"
edition = "2024"
authors = ["In Gim <in.gim@yale.edu>"]
description = "Programmable Inference Engine (PIE)"
license = "MIT"
repository = "https://github.com/pie-project/pie/pie"

[lib]

[dependencies]
anyhow = "1.0.95"
blake3 = "1.8.2"
tokio = { version = "1.45.1", features = ["full"] } # ["full", "tracing"]
tokio-tungstenite = "0.27.0"
wasmtime = { version = "33.0.0", features = ["pooling-allocator"] } #{ path = "../../wasmtime/crates/wasmtime" }
wasmtime-wasi = "33.0.0"# { path = "../../wasmtime/crates/wasi" }
wasmtime-wasi-http = "33.0.0" #{ path = "../../wasmtime/crates/wasi-http" }
zeromq = "0.4.1"
futures = "0.3.31"
tungstenite = "0.27.0"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.0"
serde_bytes = "0.11.15"
dashmap = "6.1.0"
num-traits = "0.2.19"
prost = "0.14.0"
fancy-regex = "0.15.0"
base64 = "0.22.1"
thiserror = "2.0.11"
rand = "0.9.0"
colored = "3.0"
hyper = "1.6.0"
tracing = "0.1"
boxcar = "0.2.13"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
prost-build = "0.14.0"
