[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pie-server"
version = "0.1.0"
description = "Pie CLI and Backend"
requires-python = ">=3.10"

# Combined dependencies (server + worker)
dependencies = [
    # Server dependencies
    "typer>=0.12",
    "httpx>=0.27",
    "toml>=0.10",
    "rich>=13.0",
    "huggingface_hub>=1.2.4",
    "pie-client",
    # Worker dependencies (merged from pie-backend)
    "fire>=0.6",
    "msgpack>=0.5",
    "platformdirs>=4.3",
    "pyzmq>=27.0.0",
    "requests>=2.32",
    "tqdm>=4.67",
    "websockets>=15.0",
    "ztensor>=0.1.4",
    "msgspec>=0.19.0",
    "einops>=0.8.1",
    "torch>=2.7.1",
    "psutil>=7.1.3",
    "safetensors>=0.6.2",
    "torchao>=0.14.1",
    # OpenTelemetry for profiling/tracing
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]

[project.optional-dependencies]
# CUDA backend (default for NVIDIA GPUs)
cuda = [
    "flashinfer-python>=0.6.0",
    "flashinfer-cubin>=0.6.0",
]
# Metal backend (for Apple Silicon)
metal = [
    "pyobjc-core>=10.0,<11.0",
    "pyobjc-framework-Metal>=10.0,<11.0",
    "pyobjc-framework-MetalKit>=10.0,<11.0",
    "pyobjc-framework-Cocoa>=10.0,<11.0",
]
# Development/testing
test = [
    "pytest>=8.0",
]
# Default installation includes CUDA
default = [
    "pie-server[cuda]",
]

[project.scripts]
pie = "pie_cli.cli:app"

[tool.maturin]
python-source = "src"
module-name = "pie._pie"
manifest-path = "../runtime/Cargo.toml"
features = ["pyo3/extension-module"]
include = ["src/flashinfer_metal/kernels/*.metal"]
