[package]
name = "pie-cli"
version = "0.2.0"
edition = "2024"
authors = ["Pie Team"]
description = "Programmable Inference Engine (PIE) Daemon"
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

[[bin]]
name = "pied"
path = "src/main.rs"

[dependencies]
pie-client = { path = "../client/rust" }
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
futures-util = { version = "0.3", features = ["sink"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
indicatif = "0.18"
dirs = "6.0"
rand = { version = "0.9.2", features = ["std_rng"] }
rustyline = "17.0.0"
shellexpand = "3.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = "0.1.41"
tracing-appender = "0.2"
shlex = "1.3.0"
nix = "0.30.1"
libc = "0.2.173"
regex = "1.11"
serde_json = "1.0"
wasmtime = { version = "37.0.1", features = ["pooling-allocator"] } #{ path = "../../wasmtime/crates/wasmtime" }
wasmtime-wasi = "37.0.1"# { path = "../../wasmtime/crates/wasi" }
wasmtime-wasi-http = "37.0.1" #{ path = "../../wasmtime/crates/wasi-http" }
bytes = "1.10.1"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
dashmap = "6.1.0"
boxcar = "0.2.13"
thiserror = "2.0.11"
futures = "0.3.31"
zeromq = "0.4.1"
rmp-serde = "1.3.0"
hyper = "1.6.0"
blake3 = "1.8.2"
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
num-traits = "0.2.19"
rmpv = { version = "1.3.0", features = ["with-serde"] }
base64 = "0.22.1"
fancy-regex = "0.16.0"
once_cell = "1.21"
async-trait = "0.1.88"