[project]
name = "pie-backend"
version = "0.2.0"
description = "Pie Backend"
authors = [{ name = "Pie Team" }]
license = "Apache-2.0"
requires-python = ">=3.11"

dependencies = [
    "fire>=0.6",
    "msgpack>=0.5",
    "platformdirs>=4.3",
    "pyzmq>=27.0.0",
    "requests>=2.32",
    "tqdm>=4.67",
    "websockets>=15.0",
    "ztensor>=0.1.4",
    "msgspec>=0.19.0",
    "einops>=0.8.1",
    "torch>=2.7.1",
    "psutil>=7.1.3",
    "safetensors>=0.6.2",
    "torchao>=0.14.1",
]

[project.optional-dependencies]
cuda = [
    "flashinfer-python>=0.3.1",
    "fbgemm-gpu-genai>=1.4.2",
]
metal = [
    "pyobjc-core>=10.0,<11.0",
    "pyobjc-framework-Metal>=10.0,<11.0",
    "pyobjc-framework-MetalKit>=10.0,<11.0",
    "pyobjc-framework-Cocoa>=10.0,<11.0",
]

[project.scripts]
pie-backend = "pie_backend.__main__:entrypoint"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flashinfer_metal = [
    "kernels/*.metal",
]
