[package]
name = "pie"
version = "0.2.0"
edition = "2024"
authors = ["Pie Team"]
description = "Programmable Inference Engine (Pie)"
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

[lib]
name = "_pie"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
pie-client = { path = "../client/rust" }

# PyO3 bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# Core dependencies
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6.0"
rand = { version = "0.9.2", features = ["std_rng", "os_rng"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = "0.1.41"
tracing-appender = "0.2"
serde_json = "1.0"
wasmtime = { version = "40.0.0", features = ["pooling-allocator"] }
wasmtime-wasi = "40.0.0"
wasmtime-wasi-http = "40.0.0"
bytes = "1.10.1"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
dashmap = "6.1.0"
boxcar = "0.2.13"
thiserror = "2.0.11"
futures = "0.3.31"
rmp-serde = "1.3.0"
pycrust-client = { path = "../third-party/pycrust/crates/pycrust-client" }
pycrust-ffi = { path = "../third-party/pycrust-ffi/crates/pycrust-ffi" }
hyper = "1.6.0"
blake3 = "1.8.2"
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
num-traits = "0.2.19"
rmpv = { version = "1.3.0", features = ["with-serde"] }
base64 = "0.22.1"
fancy-regex = "0.16.0"
once_cell = "1.21"
async-trait = "0.1.88"
ring = "0.17"
ssh-key = { version = "0.6", features = ["rsa", "ed25519", "ecdsa"] }
rsa = { version = "0.9", features = ["pem"] }
pem = "3.0"
p256 = { version = "0.13", features = ["pkcs8"] }
p384 = { version = "0.13", features = ["pkcs8"] }
chrono = "0.4"
ringbuffer = "0.15"
reqwest = { version = "0.12", features = ["rustls-tls"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
