[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pie-server"
version = "0.1.0"
description = "Pie Inference Engine Server CLI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "toml>=0.10",
    "rich>=13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
pie-server = "pie_server.cli:app"

[tool.maturin]
python-source = "src"
module-name = "pie_server.pie_server_rs"
manifest-path = "../runtime/Cargo.toml"
features = ["pyo3/extension-module"]
