[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pie-server"
version = "0.1.0"
description = "Pie Inference Engine Server CLI"
requires-python = ">=3.10"

# Base dependencies (without backend GPU-specific packages)
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "toml>=0.10",
    "rich>=13.0",
    "pie-client",
    "pie-backend",
]

[project.optional-dependencies]
# CUDA backend (default for NVIDIA GPUs)
cuda = [
    "flashinfer-python>=0.3.1",
    "fbgemm-gpu-genai>=1.4.2",
]
# Metal backend (for Apple Silicon)
metal = [
    "pyobjc-core>=10.0,<11.0",
    "pyobjc-framework-Metal>=10.0,<11.0",
    "pyobjc-framework-MetalKit>=10.0,<11.0",
    "pyobjc-framework-Cocoa>=10.0,<11.0",
]
# Development/testing
test = [
    "pytest>=8.0",
]
# Default installation includes CUDA
default = [
    "pie-server[cuda]",
]

[project.scripts]
pie = "pie_server.cli:app"

[tool.maturin]
python-source = "src"
module-name = "pie_server.pie_server_rs"
manifest-path = "../runtime/Cargo.toml"
features = ["pyo3/extension-module"]
